infra/k8s/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: docprep-cloud
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: docprep-cloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - name: http
      port: 80
      targetPort: http
